<resources>
    <string name="app_name" translatable="false">PushLearn</string>
    <string name="title_nowLearning">Now Learning</string>
    <string name="title_myPacks">My Packs</string>
    <string name="title_CommunityPacks">Community Packs</string>
    <string name="title_Settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_packName">Enter the pack name</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="no_cards_in_pack">Create the first card in \'My packs\'</string>
    <string name="no_packs">There is no pack \n Please create the first one</string>
    <string name="no_cards">There is no card in the pack \n Please create the first one</string>
    <string name="question">Question</string>
    <string name="enter_question">Enter the question</string>
    <string name="enter_answer">Enter the answer</string>
    <string name="answer">Answer</string>
    <string name="new_card">New Card</string>
    <string name="pack_already_exists">Pack \'%s\' already exists</string>
    <string name="card_already_exists">This card already exists</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share_to_community">Publish in community</string>
    <string name="select">Select</string>
    <string name="edit_packName">Edit pack name</string>
    <string name="enter_correct_pack_name">Enter the correct pack name</string>
    <string name="enter_correct_question">Enter the correct question</string>
    <string name="enter_correct_answer">Enter the correct answer</string>
    <string name="edit_card">Edit card</string>
    <string name="pack_is">Pack:</string>
    <string name="are_u_sure_to_delete_card">Are you sure you want to delete this card?</string>
    <string name="are_u_sure_to_delete_cards">Are you sure you want to delete these cards?</string>
    <string name="are_u_sure_to_delete_pack">Are you sure you want to delete this pack and all cards in it?</string>
    <string name="are_u_sure_to_delete_packs">Are you sure you want to delete these packs and all cards in them?</string>
    <string name="show_answer">Show answer</string>
    <string name="three_dots">...</string>
    <string name="i_know">I know</string>
    <string name="well_done">Well done!</string>
    <string name="we_hope_you_honest">We hope you are honest with yourself</string>
    <string name="i_do_not_know">I don\'t know</string>
    <string name="do_not_worry">Don\'t worry</string>
    <string name="honest_is_achievement">Being honest with yourself is already a great achievement</string>
    <string name="no_learning_card">No card is learning now, create a new one or edit yours</string>
    <string name="close">Close</string>
    <string name="how_often_to_send_notifies">How often to send notifications</string>
    <string name="frag_settings_presentation">Here you can set the following settings: \n 1)How many notifications you want to see in your notification bar \n 2)The period between notifications \n 3) Your community profile settings</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="language">Language</string>
    <string name="change_language">Change language</string>
    <string name="my_profile">My profile</string>
    <string name="how_many_notifies_u_want_to_see">How many notifications you want to see in your notification bar at the same time?</string>
    <string name="pref_time_period_between_notifies">Time period between notifications</string>
    <string name="learn">Learn</string>
    <string name="iterating_times_double_dot">Repeating times:</string>
    <string name="question_double_dot">Question:</string>
    <string name="answer_double_dot">Answer:</string>
    <string name="congrats_you_learnt_card">Congratulations! You have learnt this card!</string>
    <string name="congrats_you_learnt_pack">Congratulations! You have learnt this pack!</string>
    <string name="congrats_you_learnt_all_cards">Congratulations! You have learnt all cards!</string>
    <string name="no_card_to_learn">There is no card to learn</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="app_settings">App settings</string>
    <string name="log_in_using_social_networks">Log in using social networks</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="create_a_password">Create a password</string>
    <string name="i_accept_the_terms_and_conditions">I accept PushLearn\'s <b>Terms of Use</b> and <b>Privacy Policy</b>.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="create_a_nickname">Create a nickname</string>
    <string name="this_email_is_busy">This email is busy</string>
    <string name="this_nickname_is_busy">This nickname is busy</string>
    <string name="something_is_wrong_try_another_email">Oops... Something is wrong. Try to use another email.</string>
    <string name="something_is_wrong">Oops... \n Log In to your account.</string>
    <string name="successful_registration">Welcome to PushLearn communtity!</string>
    <string name="password_should_be_longer">Password must be longer than 8 characters and contain at least \n 1 uppercase letter, \n 1 lowercase letter, \n 1 digit</string>
    <string name="packs">packs</string>
    <string name="rating_double_dot">Rating:</string>
    <string name="incorrect_password_or_email">Incorrect password or email</string>
    <string name="successful_sign_in">We are glad to see you in our community again!</string>
    <string name="account_settings">Account Settings</string>
    <string name="exit_the_account">Exit the account</string>
    <string name="log_out">Log Out</string>
    <string name="are_u_sure_to_log_out">Do you really want to exit your account?</string>
    <string name="are_u_sure_to_reset_stats">Do you really want to reset the statistics?</string>
    <string name="you_published_no_packs">You haven\'t published any pack \n Your community packs will be here</string>
    <string name="options">Options</string>
    <string name="creator_double_dot">Creator:</string>
    <string name="cards">cards</string>
    <string name="description">Description:</string>
    <string name="no_cards_in_com_pack">There is no card in the pack</string>
    <string name="you_already_have_pack_with_such_name">You already have pack with such name. Please rename your pack before adding this.</string>
    <string name="are_u_sure_to_delete_com_pack">Are you sure you want to delete this pack from your device?</string>
    <string name="rename">Rename</string>
    <string name="are_u_sure_to_delete_pack_from_community">Are you sure you want to delete this pack from community? \n Your rating will be changed after it.</string>
    <string name="title_double_dot">Title:</string>
    <string name="enter_title">Enter Title</string>
    <string name="description_double_dot">Description:</string>
    <string name="subcategory_double_dot">Subcategory:</string>
    <string name="category_double_dot">Category:</string>
    <string name="enter_pack_description">Enter pack description</string>
    <string name="pack_publish">Publish pack</string>
    <string name="successful_pack_publication">Successful pack publication! \n Thank you for the contribution to our community!</string>
    <string name="choose_pack_to_share">Choose pack to share</string>
    <string name="no_internet">No Internet connection(</string>
    <string name="search_in_pack_description">Search in pack description</string>
    <string name="no_packs_found">No packs found</string>
    <string name="pushlearn_community">PushLearn Community</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="welcome_back_to_PL_communtity">Welcome back to PushLearn communtity!</string>
    <string name="edit_nickname">You can change the nickname only once without premium</string>
    <string name="edit_nickname_for_premium">Premium users can change their nickname more then one time</string>
    <string name="successful_nickname_change">You have changed your nickname successfully!</string>
    <string name="nickname_should_be_less_than_15">The length of nickname should be less than 15 symbols</string>
    <string name="download_to_my_packs">Save in \"My packs\"</string>
    <string name="successful_pack_update">You edited pack successfully!</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="empty_field">Field can\'t be empty</string>
    <string name="username_too_long">Username too long</string>
    <string name="password_too_weak">Password too weak</string>
    <string name="you_learnt_card">You have learnt this card!</string>
    <string name="disable_advertisement">Disable advertisement</string>
    <string name="pushlearn_premium">PushLearn Premium</string>
    <string name="discover_new_opportunities_with">Discover new opportunities with\n</string>
    <string name="pay_monthly">Pay monthly\n</string>
    <string name="price_for_1_month">2.99$</string>
    <string name="price_for_3_months">5.99$\n</string>
    <string name="pay_once_three_months">Pay once three months\n</string>
    <string name="price_for_1_month_3_months_subscribe">(1.99$/month)</string>
    <string name="first_feature_for_premium">Access to the premium packs</string>
    <string name="second_feature_for_premium">Add more then 3 packs from community</string>
    <string name="third_feature_for_premium">Create more then 5 packs</string>
    <string name="fourth_feature_for_premium">Add categories and subcategories without verification</string>
    <string name="fifth_feature_for_premium">Look through statistics about your learning progress</string>
    <string name="sixth_feature_for_premium">Change nickname when you want</string>
    <string name="seventh_feature_for_premium">Set number of notifications in your notification bar</string>
    <string name="eighth_feature_for_premium">Disable all advertisement</string>
    <string name="auto_renew_plans_cancel_anytime">Auto renew plans. Cancel anytime</string>
    <string name="get_pushlearn_premium_for_free">GET PUSHLEARN PREMIUM FOR FREE</string>
    <string name="visit_our_top_of_users_and_look_through_rewards_for_places_in_the_top">Visit our top of users and look through rewards for places in the top</string>
    <string name="server_clerntid_google">699493798150-4l3jatsk35sdovrninlelhj7163dhn21.apps.googleusercontent.com</string>
    <string name="rewards">Rewards:</string>
    <string name="first_place_reward">Free 3 months of PushLearn Premium</string>
    <string name="second_place_reward">Free 2 months of PushLearn Premium</string>
    <string name="third_place_reward">Free 1 month of PushLearn Premium</string>
    <string name="other_place_reward">4-50 Free week of PushLearn Premium</string>
    <string name="every_month_ratings_reset">Every month ratings reset</string>
    <string name="before_reset">before reset</string>
    <string name="top_of_pushlearn_community">Top of PushLearn Community</string>
    <string name="confirm_your_email">Confirm your email</string>
    <string name="enter_code_from_your_email">Enter code from your email</string>
    <string name="the_code_is_incorrect">The code is incorrect</string>
    <string name="discover_new_opportunities_with_pushlearn_premium">Discover new opportunities with\nPushLearn Premium</string>
    <string name="pay_monthly_5">Pay monthly\n4.99$/month</string>
    <string name="pay_once_three_months_12">Pay once three months\n11.99$/3 months\n(3.99$/month)</string>
</resources>