<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/app_settings"
        android:key="pref_key_app_settings">
        <Preference
            android:key="pref_number_of_notifies_in_bar"
            android:summary="summary"
            android:title="@string/how_many_notifies_u_want_to_see" />
        <Preference
            android:key="pref_time_period_between_notifies"
            android:summary="summary"
            android:title="@string/pref_time_period_between_notifies"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/account_settings"
        android:key="pref_key_account_settings">
    <Preference
        android:key="pref_log_out"
        android:summary="@string/exit_the_account"
        android:title="@string/log_out" />
    </PreferenceCategory>
</PreferenceScreen>