<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <!-- <item
        android:id="@+id/item1"
        android:title="Item 1"
        app:showAsAction="never" /> -->
    <item
        android:id="@+id/menu_activity_pack_create_item"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_activity_pack_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_activity_selected_pack_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_activity_selected_pack_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>