<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_push_clicked_question_text_view"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_push_clicked_what_is_the_answer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/three_dots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_push_clicked_question_text_view" />

     <Button
        android:id="@+id/dialog_push_clicked_show_answer_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_answer"
        app:layout_constraintTop_toBottomOf="@id/dialog_push_clicked_what_is_the_answer_text_view"
        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/dialog_push_clicked_i_know_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:text="@string/i_know"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/dialog_push_clicked_i_do_not_know_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_push_clicked_what_is_the_answer_text_view"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/dialog_push_clicked_i_do_not_know_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_height="wrap_content"
        android:text="@string/i_do_not_know"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_push_clicked_i_know_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_push_clicked_what_is_the_answer_text_view"
        app:layout_constraintHorizontal_weight="1"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>